[package]
authors = ["Russell Cloran <rcloran@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std::no-alloc"]
description = "A driver for the AXP192 power management IC"
edition = "2021"
keywords = ["embedded", "embedded-hal-driver", "no-alloc", "no-std"]
license = "MIT"
name = "axp192"
readme = "README.md"
repository = "https://github.com/rcloran/axp192-rs"
version = "0.1.0"

[dependencies]
embedded-hal = "0.2.7"

[dev-dependencies]
esp-backtrace = { version = "0.8.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.6", features = ["esp32"] }
esp32-hal = "0.15.0"
